hphp/test/zend/bad/missing-trait.php
<?php
error_reporting(E_ALL);

class TraitsTest {
  use THello;
}

$test = new TraitsTest();

?>